--- a/config/database.yml
+++ b/config/database.yml
@@ -23,16 +23,17 @@ default: &default
 
 development:
   <<: *default
-  database: untitled_application_development
+  database: sdk_management_portal_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: untitled_application-app
+  #username: sdk_management_portal-app
+  username: sdk_portal
 
   # The password associated with the postgres role (username).
-  #password:
+  password: test
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -41,7 +42,7 @@ development:
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
-  #port: 5432
+  port: 5434
 
   # Schema search path. The server defaults to $user,public
   #schema_search_path: myapp,sharedapp,public
@@ -57,7 +58,10 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: untitled_application_test
+  username: sdk_portal
+  password: test
+  port: 5434
+  database: sdk_management_portal_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,7 +84,7 @@ test:
 #
 production:
   <<: *default
-  database: untitled_application_production
-  username: untitled_application
-  password: <%= ENV['UNTITLED_APPLICATION_DATABASE_PASSWORD'] %>
+  database: sdk_management_portal_production
+  username: sdk_management_portal
+  password: <%= ENV['SDK_MANAGEMENT_PORTAL_DATABASE_PASSWORD'] %>
   url: <%= ENV['DATABASE_URL'] %>
