--- a/zapier/package.json
+++ b/zapier/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "untitled-application",
+  "name": "sdk-management-portal",
   "version": "1.0.0",
-  "description": "Integrate Zapier with Untitled Application",
+  "description": "Integrate Zapier with SDK Management Portal",
   "main": "index.js",
   "scripts": {
     "test": "mocha --recursive -t 10000"
